# routeweaver

./: .gitignore  Cargo.toml
common/: Cargo.toml
common/src/: error.rs  lib.rs
common/src/ipc/: mod.rs  socket.rs  stream.rs
daemon/: Cargo.toml  build.rs
daemon/src/: config.rs  error.rs  main.rs  noise.rs  proto.rs  state.rs
daemon/src/channel/: assembler.rs  disassembler.rs  handle_message.rs  initiate.rs  mod.rs  reader.rs  writer.rs
daemon/src/discover/: mod.rs
daemon/src/discover/driver/: mod.rs  udp_multicast.rs
daemon/src/discover/driver/bluetooth_passive/: linux.rs  mod.rs
daemon/src/ipc/: mod.rs  socket.rs
daemon/src/transport/: accepter.rs  handshake_continue.rs  initiate.rs  mod.rs  packet.rs  reader.rs  router.rs  setup_connection.rs  writer.rs
daemon/src/transport/driver/: mod.rs  tcp.rs  ws.rs  wss.rs
daemon/src/transport/driver/bluetooth/: linux.rs  mod.rs
services/file-sharing/: Cargo.toml
services/file-sharing/src/: client.rs  main.rs  manifest.rs
services/file-sharing/src/subcommands/: create_manifest.rs  download.rs  mod.rs  mount.rs  serve.rs
services/ipv6/: Cargo.toml
services/ipv6/src/: main.rs
services/speed-test/: Cargo.toml
