[package]
name = "routeweaver-common"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
serde = { workspace = true }
serde_with = { workspace = true }
bincode = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
arrayvec = { workspace = true }
data-encoding = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
