[package]
name = "routeweaver-daemon"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
routeweaver-common = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
url = { workspace = true }
thiserror = { workspace = true }
arrayvec = { workspace = true }
blake2 = { workspace = true }
futures-util = { workspace = true }
zeroize = { workspace = true }
data-encoding = { workspace = true }
rand = { workspace = true }
scc = { workspace = true }
rangemap = { workspace = true }
serde-inline-default = "0.2"
snow = "0.9"
lz4_flex = "0.11"
itertools = "0.14"
bytes = "1.9"
ringbuffer = "0.15"
sealed = "0.6"
sysinfo = { version = "0.33", features = ["network"], default-features = false }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "freebsd", target_os = "openbsd", target_os = "windows"))'.dependencies]
socket2 = { version = "0.5", optional = true }
tokio-tungstenite = { version = "0.26", features = ["url"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
bluer = { version = "0.17", optional = true }
uuid = { version = "1.11", optional = true }

[build-dependencies]
cfg_aliases = "0.2"

[features]
default = [
    "transport-tcp",
    "transport-ws",
    "transport-wss",
    "discovery-udp-multicast",
]
transport-tcp = ["dep:socket2"]
transport-udp = ["dep:socket2"]
transport-ws = ["dep:socket2", "dep:tokio-tungstenite"]
transport-wss = [
    "dep:socket2",
    "dep:tokio-tungstenite",
    "tokio-tungstenite/native-tls",
]
transport-bluetooth = ["dep:bluer", "bluer/bluetoothd", "bluer/l2cap"]
discovery-bluetooth-passive = ["dep:bluer", "bluer/bluetoothd", "dep:uuid"]
discovery-udp-multicast = ["dep:socket2"]
