[package]
name = "routeweaver-service-speed-test"
version = "0.1.0"
edition = "2021"

[dependencies]
routeweaver-common = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
toml = { workspace = true }
blake2 = { workspace = true }
arrayvec = { workspace = true }
data-encoding = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
scc = { workspace = true }
